Change by comments

--- a/catalog.html
+++ b/catalog.html
@@ -54,7 +54,7 @@
       </a>
       <form class="popup" action="https://echo.htmlacademy.ru/courses" method="post">
         <label class="visually-hidden" for="search">Строка поиска</label>
-        <input type="search" name="search" id="search" placeholder="Что ищем?" />
+        <input type="search" name="search" id="search" placeholder="Крем-брюле" />
       </form>
     </section>
     <section class="form-login">
@@ -67,10 +67,10 @@
         <span>Вход</span>
       </a>
       <form class="popup" action="https://echo.htmlacademy.ru/courses" method="post">
-        <label class="visually-hidden" for="email">Строка ввода почты</label>
-        <input type="email" id="email" name="email" required />
-        <label  class="visually-hidden" for="password"> Строка ввода пароля</label>
-        <input type="password" id="password" name="password" placeholder="Пароль" required />
+        <label class="visually-hidden" for="email-login">Строка ввода почты</label>
+        <input type="email" id="email-login" name="email" required />
+        <label  class="visually-hidden" for="password-login"> Строка ввода пароля</label>
+        <input type="password" id="password-login" name="password" placeholder="Пароль" required />
         <button class="button" type="submit">Войти</button>
         <a href="#"> Забыли пароль? </a>
         <a href="#"> Новая регистрация </a>
@@ -124,10 +124,8 @@
   </header>
   <main>
     <div class="path">
-      <a href="index.html">Главная</a>
-        <span>&raquo;</span>
-      <a href="catalog.html">Каталог</a>
-        <span>&raquo;</span>
+      <a class="path-raquo" href="index.html">Главная</a>
+      <a class="path-raquo" href="catalog.html">Каталог</a>
       <a href="">Сливочное</a>
     </div>
     <h1 class="main-title">Cливочное мороженое</h1>
