--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </a>
       <form class="popup" action="https://echo.htmlacademy.ru/courses" method="post">
         <label class="visually-hidden" for="search" >Строка поиска</label>
-        <input type="search" name="search" id="search" placeholder="Что ищем?" />
+        <input type="search" name="search" id="search" placeholder="Крем-брюле" />
       </form>
     </section>
 
@@ -69,10 +69,10 @@
       </a>
 
       <form class="popup login-form" action="https://echo.htmlacademy.ru/courses" method="post">
-        <label class="visually-hidden" for="email">Строка ввода почты</label>
-        <input type="email" id="email" name="email" required />
-        <label class="visually-hidden" for="password"> Строка ввода пароля</label>
-        <input type="password" id="password" name="password" placeholder="Пароль" required />
+        <label class="visually-hidden" for="email-login">Строка ввода почты</label>
+        <input type="email" id="email-login" name="email" required />
+        <label class="visually-hidden" for="password-login"> Строка ввода пароля</label>
+        <input type="password" id="password-login" name="password" placeholder="Пароль" required />
         <button class="button" type="submit">Войти</button>
         <a href="#"> Забыли пароль? </a>
         <a href="#"> Новая регистрация </a>
@@ -345,12 +345,12 @@
   <form class="popup visually-hidden" action="https://echo.htmlacademy.ru/courses" method="post">
     <h2 class="visually-hidden"> Форма обратной связи </h2>
     <h3>Мы обязательно вам ответим!</h3>
-    <label for="name" class="visually-hidden"> Имя и фамилия</label>
-    <input type="text" name="name" id="name" placeholder="Имя Фамилия" required>
-    <label for="email" class="visually-hidden">Электронная почта</label>
-    <input type="email" id="email" name="email" placeholder="email@example.com" required>
-    <label for="text" class="visually-hidden">Дополнительная информация</label>
-    <textarea id="text" name="text" rows="7" placeholder="В свободной форме" required></textarea>
+    <label for="user-name" class="visually-hidden"> Имя и фамилия</label>
+    <input type="text" name="name" id="user-name" placeholder="Имя Фамилия" required>
+    <label for="user-email" class="visually-hidden">Электронная почта</label>
+    <input type="email" id="user-email" name="email" placeholder="email@example.com" required>
+    <label for="user-text" class="visually-hidden">Дополнительная информация</label>
+    <textarea id="user-text" name="text" rows="7" placeholder="В свободной форме" required></textarea>
     <button class="button" type="submit">Отправить</button>
   </form>
 </body>
