--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <span>Пусто</span>
       </a>
     </section>
-    <section>
+    <section class="schedule">
       <h2 class="visually-hidden">Режим работы</h2>
       <p>С 10 до 20, ежедневно</p>
       <a href="tel:88124502525">8 812 450-25-25</a>
@@ -104,91 +104,83 @@
 
     <section>
       <h2 class="visually-hidden">Самое популярное мороженое</h2>
-      <div>
-        <div>
+      <div class="main-slide">
+        <div class="main-slide-item">
           <h3>Крем-брюле и пломбир с малиновым джемом</h3>
-          <a class="button" href="#">Давайте оба!</a>
+          <a class="button btn-double-order" href="#">Давайте оба!</a>
         </div>
-        <div>
+        <div class="main-slide-item">
           <h3>Шоколадный пломбир и лимонный сорбет</h3>
-          <a class="button" href="#">Давайте оба!</a>
+          <a class="button btn-double-order" href="#">Давайте оба!</a>
         </div>
-        <div>
+        <div class="main-slide-item">
           <h3>Пломбир с помадкой и клубничный щербет</h3>
-          <a class="button" href="#">Давайте оба!</a>
+          <a class="button btn-double-order" href="#">Давайте оба!</a>
         </div>
-        <ul>
-          <li>
-            <button> <span class="visually-hidden">Слайд 1</span></button>
+        <ul class="slide-list">
+          <li class="slide-item">
+            <span class="visually-hidden">Слайд 1</span>
           </li>
-          <li>
-            <button> <span class="visually-hidden">Слайд 2</span></button>
+          <li class="slide-item">
+            <span class="visually-hidden">Слайд 2</span>
           </li>
-          <li>
-            <button><span class="visually-hidden">Слайд 3</span></button>
+          <li class="slide-item">
+            <span class="visually-hidden">Слайд 3</span>
           </li>
         </ul>
       </div>
     </section>
 
-    <section>
+    <section class="special special-rasp">
       <h2 class="visually-hidden">Акционное предложение</h2>
       <h3>Малинка даром!</h3>
       <p>
         При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ
         банку маринового варенья бесплатно.
       </p>
-      <a href="#">Хочу варенье!</a>
+      <a class="button btn-special" href="#">Хочу варенье!</a>
     </section>
-    <section>
+    <section class="special special-chocolate">
       <h2 class="visually-hidden">Акционное предложение</h2>
       <h3>Шоколадки даром!</h3>
       <p>
         При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей
         шоколадной присыпки совершенно бесплатно.
       </p>
-      <a href="#">Хочу шоколадки!</a>
+      <a class="button btn-special" href="#">Хочу шоколадки!</a>
     </section>
 
-    <section>
+    <section class="catalog-hits">
       <h2 class="visually-hidden">Хиты продаж мороженого</h2>
-      <ul>
-        <li>
-          <div>
-            <p>Хит</p>
-            <p>310 &#8381;
-              <span>/кг</span>
-            </p>
+      <ul class="catalog-list">
+        <li class="catalog-item">
+          <div class="catalog-item-ice catalog-item-orange">
+            <div class="catalog-item-hit"></div>
+            <p>310 &#8381;<span>/кг</span></p>
           </div>
           <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
           <a class="button" href="#">Быстрый просмотр</a>
         </li>
-        <li>
-          <div>
-            <p>Хит</p>
-            <p>380 &#8381;
-              <span>/кг</span>
-            </p>
+        <li class="catalog-item">
+          <div class="catalog-item-ice catalog-item-coffee">
+            <div class="catalog-item-hit"></div>
+            <p>380 &#8381;<span>/кг</span></p>
           </div>
           <h3>Сливочно-кофейное с кусочками шоколада</h3>
           <a class="button" href="#">Быстрый просмотр</a>
         </li>
-        <li>
-          <div>
-            <p>Хит</p>
-            <p>355 &#8381;
-              <span>/кг</span>
-            </p>
+        <li class="catalog-item">
+          <div class="catalog-item-ice catalog-item-strawberry">
+            <div class="catalog-item-hit"></div>
+            <p>355 &#8381;<span>/кг</span></p>
           </div>
           <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
           <a class="button" href="#">Быстрый просмотр</a>
         </li>
-        <li>
-          <div>
-            <p>Хит</p>
-            <p>415 &#8381;
-              <span>/кг</span>
-            </p>
+        <li class="catalog-item">
+          <div class="catalog-item-ice catalog-item-brulee">
+            <div class="catalog-item-hit"></div>
+            <p>415 &#8381;<span>/кг</span></p>
           </div>
           <h3>Сливочное крем-брюле с карамельной подливкой</h3>
           <a class="button" href="#">Быстрый просмотр</a>
@@ -246,17 +238,17 @@
       </form>
     </section>
 
-    <section>
+    <section class="contact">
       <h2 class="visually-hidden">Где мы находимся?</h2>
       <img src="https://via.placeholder.com/150x100" alt="Месторасположение магазина мороженного" width=" " height="">
-      <div>
+      <div  class="contact-info">
         <h2 class="visually-hidden">Наш адрес</h2>
         <p>Адрес главного офиса и офлайн-магазина:</p>
         <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
         <p>Для заказов по телефону:</p>
         <a href="tel:88124502525">8 812 450-25-25</a>
         <p>(с 10 до 20 ежедневно)</p>
-        <a class="button" href="#">Форма обратной связи</a>
+        <button class="button btn-contact" href="#">Форма обратной связи</button>
       </div>
     </section>
   </main>
