Change by comments

--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
           <h3>Пломбир с помадкой и клубничный щербет</h3>
           <a class="button btn-double-order" href="#">Давайте оба!</a>
         </div>
-        <ul class="slide-list">
-          <li class="slide-item">
-            <span class="visually-hidden">Слайд 1</span>
+        <ul class="slide-buttons">
+          <li class="slide-button">
+            <button class="btn-slide"><span class="visually-hidden">Слайд 1</span></button>
           </li>
-          <li class="slide-item">
-            <span class="visually-hidden">Слайд 2</span>
+          <li class="slide-button">
+           <button class="btn-slide"><span class="visually-hidden">Слайд 2</span></button>
           </li>
-          <li class="slide-item">
-            <span class="visually-hidden">Слайд 3</span>
+          <li class="slide-button">
+           <button class="btn-slide"><span class="visually-hidden">Слайд 3</span></button>
           </li>
         </ul>
       </div>
@@ -248,7 +248,7 @@
         <p>Для заказов по телефону:</p>
         <a href="tel:88124502525">8 812 450-25-25</a>
         <p>(с 10 до 20 ежедневно)</p>
-        <button class="button btn-contact" href="#">Форма обратной связи</button>
+        <button class="button btn-contact">Форма обратной связи</button>
       </div>
     </section>
   </main>
