Change by comments

--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
       <ul class="nav-list">
         <li>
           <a class="btn-catalog" href="catalog.html"> Каталог</a>
-          <ul class="nav-inner-list visually-hidden">
+          <ul class="nav-inner-list sub-menu">
             <li>
               <a href="#">Новинки</a>
             </li>
@@ -44,7 +44,7 @@
         </li>
       </ul>
     </nav>
-    <div class="user-button">
+    <div class="user-menu">
     <section class="form-search">
       <h2 class="visually-hidden">Форма поиска</h2>
       <a class="btn-search" href="#">
@@ -207,84 +207,84 @@
       <ul class="catalog-list">
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-orange">
-            <p class="catalog-">310 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">310 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
           <a class="button" href="#" >Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-coffee">
-            <p>380 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">380 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочно-кофейное с кусочками шоколада</h3>
           <a class="button" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-strawberry">
-            <p>355 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">355 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
           <a class="button" href="#" >Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-brulee">
-            <p>415 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">415 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочное крем-брюле с карамельной подливкой</h3>
           <a class="button" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-lingonberry">
-            <p>325 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">325 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочное с брусничным джемом</h3>
           <a class="button" href="#" >Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-blueberries">
-            <p>410 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">410 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочно-черничное с цельными ягодами черники</h3>
           <a class="button" href="#" >Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-lemon">
-            <p>315 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">315 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочно-лимонное с карамельной присыпкой</h3>
           <a class="button" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-chocolate">
-            <p>320 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">320 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочное с шоколадной стружкой</h3>
           <a class="button" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-vanilla">
-            <p>440 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">440 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочно-ванильное с кусочками шоколада</h3>
           <a class="button" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-menthol">
-            <p>435 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">435 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочноe с ментоловым сиропом</h3>
           <a class="button" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-blackchocolate">
-            <p>355 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">355 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочное с кусочками черного шоколада</h3>
           <a class="button" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-mint">
-            <p>420 &#8381; <span>/кг</span></p>
+            <p class="catalog-item-price">420 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочное с мятным сиропом</h3>
           <a class="button" href="#">Быстрый просмотр</a>
