--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <ul class="nav-list">
         <li>
           <a href="catalog.html"> Каталог</a>
-          <ul class="nav-inner-list visually-hidden">
-            <li >
+          <ul class="nav-inner-list sub-menu">
+            <li>
               <a href="#">Новинки</a>
             </li>
             <li>
@@ -44,7 +44,7 @@
         </li>
       </ul>
     </nav>
-    <div class="user-button">
+    <div class="user-menu">
     <section class="form-search">
       <h2 class="visually-hidden">Форма поиска</h2>
       <a class="btn-search" href="#">
